test/e2e/invalid/larger_int.mylang
{define x of int8 = 256;}
